# Web_Movies_Proj

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
db/: db.py  models.py  schemas.py  security.py
front/: admin.html  admin.js  catalog.html  catalog.js  common.js  login.html  login.js  room.html  room.js  styles.css
tests/: test_api.py  test_security.py
