[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-room"
version = "0.1.0"
description = "Simple FastAPI video watch party"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
py-modules = ["main"]
packages = ["db"]
